# erwin

./: .gitmodules  CMakeLists.txt  NOTES.md  doxyfile.in  erwin.sublime-project
source/Applications/AtlasPacker/: CMakeLists.txt
source/Applications/Editor/: CMakeLists.txt
source/Applications/FractalExplorer/: CMakeLists.txt
source/Applications/Fudge/: CMakeLists.txt
source/Applications/InternString/: CMakeLists.txt
source/Applications/PoliPuyo/: CMakeLists.txt
source/Applications/RTest/: CMakeLists.txt
source/Applications/Sandbox/: CMakeLists.txt
source/Erwin/: CMakeLists.txt  color.cpp  erwin.h  event.h  math3d.h  mesh.cpp  quaternion.h  render_queue.h  vertex_layout.h  wmesh.cpp
source/Erwin/asset/: asset_manager.cpp  asset_manager.h  asset_manager_exp.cpp  asset_manager_exp.h  atlas_loader.cpp  atlas_loader.h  bounding.cpp  bounding.h  dxt_compressor.cpp  dxt_compressor.h  environment.h  environment_loader.cpp  environment_loader.h  handles.cpp  handles.h  loader_common.h  material.cpp  material.h  material_common.h  material_loader.cpp  material_loader.h  mesh.cpp  mesh.h  mesh_fabricator.cpp  mesh_fabricator.h  mesh_loader.cpp  mesh_loader.h  procedural_geometry.cpp  procedural_geometry.h  resource_cache.hpp  resource_manager.hpp  special_texture_factory.cpp  special_texture_factory.h  stb_build.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  texture_loader.cpp  texture_loader.h
source/Erwin/core/: application.cpp  application.h  cat_file.cpp  cat_file.h  clock.hpp  config.cpp  config.h  core.cpp  core.h  db_pool.cpp  db_pool.h  dxa_file.cpp  dxa_file.h  eastl_new.h  entry_point.h  file_system.cpp  file_system.h  game_clock.cpp  game_clock.h  handle.h  hashstr.h  hetero.hpp  input.h  intern_string.cpp  intern_string.h  job_system.cpp  job_system.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  registry.cpp  registry.h  string_utils.h  tom_file.cpp  tom_file.h  unique_id.cpp  unique_id.h  value_map.cpp  value_map.h  (+7 more)
source/Erwin/debug/: error.h  instrumentor.cpp  instrumentor.h  logger.cpp  logger.h  logger_common.cpp  logger_common.h  logger_sink.cpp  logger_sink.h  logger_thread.cpp  logger_thread.h  net_sink.cpp  net_sink.h  stack_trace.cpp  stack_trace.h  texture_peek.cpp  texture_peek.h
source/Erwin/editor/: bounding_box_system.cpp  bounding_box_system.h  editor_components.cpp  editor_components.h  font_awesome.h  gizmo_system.cpp  gizmo_system.h  layer_editor.cpp  layer_editor.h  layer_editor_background.cpp  layer_editor_scene.cpp  layer_editor_scene.h  overlay_camera_tracker.cpp  overlay_camera_tracker.h  overlay_stats.cpp  overlay_stats.h  scene.cpp  scene.h  widget.cpp  widget.h  widget_console.cpp  widget_console.h  widget_game_view.cpp  widget_game_view.h  widget_hex_dump.cpp  widget_hex_dump.h  widget_inspector.cpp  widget_inspector.h  widget_keybindings.cpp  widget_keybindings.h  widget_material_authoring.cpp  widget_material_authoring.h  widget_materials.cpp  widget_materials.h  widget_rt_peek.cpp  widget_rt_peek.h  widget_scene_hierarchy.cpp  widget_scene_hierarchy.h  widget_scene_view.cpp  widget_scene_view.h
source/Erwin/entity/: base_component_system.cpp  base_component_system.h  component.cpp  component.h  component_PBR_material.cpp  component_PBR_material.h  component_bounding_box.cpp  component_bounding_box.h  component_camera.cpp  component_camera.h  component_description.h  component_dirlight_material.cpp  component_dirlight_material.h  component_manager.h  component_mesh.cpp  component_mesh.h  component_system.cpp  component_system.h  component_transform.cpp  component_transform.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  entity_types.h  hierarchy.cpp  hierarchy.h  init.cpp  init.h  light.cpp  light.h  reflection.cpp  reflection.h
source/Erwin/event/: delegate.h  entity_events.cpp  entity_events.h  event.cpp  event.h  event_bus.cpp  event_bus.h  keys.h  window_events.cpp  window_events.h
source/Erwin/filesystem/: cat_file.cpp  cat_file.h  file_path.cpp  file_path.h  filesystem.cpp  filesystem.h  hdr_file.cpp  hdr_file.h  image_file.cpp  image_file.h  obj_file.cpp  obj_file.h  spv_file.cpp  spv_file.h  tom_file.cpp  tom_file.h  wesh_file.cpp  wesh_file.h  wpath.cpp  wpath.h  xml_file.cpp  xml_file.h
source/Erwin/imgui/: color.h  dialog.cpp  dialog.h  font_awesome.h  imgui_build.cpp  imgui_layer.cpp  imgui_layer.h  imgui_utils.cpp  imgui_utils.h  theme.cpp  theme.h
source/Erwin/input/: action.h  camera_2d_controller.cpp  camera_2d_controller.h  camera_3d_controller.cpp  camera_3d_controller.h  freefly_camera_controller.cpp  freefly_camera_controller.h  freefly_camera_system.cpp  freefly_camera_system.h  input.cpp  input.h  keys.h  rotate_around_camera_controller.cpp  rotate_around_camera_controller.h  tracker_camera_system.cpp  tracker_camera_system.h
source/Erwin/level/: chunk.h  chunk_mesher.cpp  chunk_mesher.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h  scene_manager.cpp  scene_manager.h
source/Erwin/math/: color.cpp  color.h  convolution.cpp  convolution.h  math3d.cpp  math3d.h  math_structures.hpp  quaternion.cpp  transform.cpp  transform.h  utils.h
source/Erwin/memory/: arena.h  free_list.cpp  free_list.h  handle_pool.cpp  handle_pool.h  heap_area.cpp  heap_area.h  linear_allocator.cpp  linear_allocator.h  memory.hpp  memory_utils.cpp  memory_utils.h  pool_allocator.cpp  pool_allocator.h  resource_pool.hpp
source/Erwin/render/: WIP_renderer_2d.cpp  WIP_renderer_2d.h  backend.cpp  backend.h  buffer.cpp  buffer.h  buffer_layout.cpp  buffer_layout.h  camera_2d.cpp  camera_2d.h  camera_3d.cpp  camera_3d.h  (+62 more)
source/Graphics/: CMakeLists.txt  common.h  device_context.h  engine_factory.cpp  engine_factory.h  graphics.h  render_context.h  render_device.cpp  render_device.h  swap_chain.cpp  swap_chain.h  swapchain.h  window.cpp  window.h
source/tests/: CMakeLists.txt  catch_app.cpp  nuclear.cpp  test_async.cpp  test_config.cpp  test_ecs.cpp  test_event.cpp  test_hierarchy.cpp  test_jobs.cpp  test_logger.cpp  test_memory.cpp  test_render_thread.cpp  test_rng.cpp  test_serial.cpp
(+507 files in other folders)
